--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "crypta-invest-my-design",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^5.0.8"
-  }
+    "homepage": "https://serhiiikin.github.io/crypta-invest-my-design/",
+    "name": "crypta-invest-my-design",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "deploy": "gh-pages -b master -d dist",
+        "preview": "vite preview"
+    },
+    "devDependencies": {
+        "vite": "^5.0.8"
+    },
+    "dependencies": {
+        "gh-pages": "^6.1.1"
+    }
 }
